hphp/test/zend/good/Zend/tests/add_004.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Cannot perform mathematical operation on HH\vec and int' in %s/add_004.php:5
Stack trace:
%A
